----------
v6.0.4-git
----------

[mms] Fix display of attachment name in basic compose screen (Bug #11947).


------
v6.0.3
------

[mms] Re-add apply mail filters action in dynamic view.
[mms] Improved parsing of References header when replying to a message.
[mms] Fix verifying an enveloped signed & encrypted S/MIME message (Bug
      #11874).
[mms] Fix converting charset of signature/trailer in compose message if not
      sending in UTF-8 (Bug #11898).
[mms] Fix redirection to mailbox page after sending message in minimal view
      (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #11897).
[mms] Fix duplicate signature being added to compose messages in minimal view
      (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #11896).
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[mms] Fix loss of HTML body if related conversion is turned off (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #11883).
[mms] Ensure that polled mailboxes in dynamic view continue to show unseen
      message count if its child status changes (Bug #11864).
[jan] Include address groups in auto-completion list if address book is below
      AJAX lookup threshold.
[jan] Update French translation (Laurent Foucher
      <laurent.foucher@iut-tlse3.fr>).
[mms] Correctly remember form state when refreshing basic view compose page
      (Bug #11794).
[mms] Fix NOT criteria for custom header searches (Bug #11802).
[mms] Fix saving compose message to draft mailbox when session expires (Bug
      #11795).
[mms] Honor 'hide_when_unlimited' option for the quota driver (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #11782).
[mms] Fix toggling other options in dynamic compose screen.


------
v6.0.2
------

[mms] Always add MDNSent flag when saving a draft/sent message.
[mms] Fix preview message text in basic view (Bug #11724).
[mms] Don't delete saved draft on session close.
[mms] Improved generation and parsing of mbox files.