@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Workaround broken Message-IDs generated by Outlook when replying to a message (Bug #11953).
 * [mms] Fix display of attachment name in basic compose screen (Bug #11947).
  </notes>
  <contents>
@@ -2899,6 +2900,7 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Workaround broken Message-IDs generated by Outlook when replying to a message (Bug #11953).
 * [mms] Fix display of attachment name in basic compose screen (Bug #11947).
    </notes>
   </release>
