@@ -2,6 +2,8 @@
 v6.0.4-git
 ----------
 
+[mms] Workaround broken Message-IDs generated by Outlook when replying to a
+      message (Bug #11953).
 [mms] Fix display of attachment name in basic compose screen (Bug #11947).
 
 
